<resources>
    <string name="app_name">Golf Score App</string>
    <string name="initial_header">Scorecard</string>
    <string name="player_count">Number of Players</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>

    <string name="sa_old">Old Course</string>
    <string name="sa_castle">Castle Course</string>
    <string name="sa_new">New Course</string>
    <string name="sa_jubilee">Jubilee Course</string>
    <string name="sa_eden">Eden Course</string>
    <string name="sa_strathtyrum">Strathtyrum Course</string>
    <string name="sa_balgove">Balgove Course</string>

    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>

    <string name="player_name">Player Name</string>
    <string name="handicap">Handicap</string>
    <string name="tee">Tee</string>

    <string name="begin_round">Begin Round</string>
    <string name="return_to_course_selection">Return To Course Selection</string>

    <string name="hard_tee_color">Red</string>
    <string name="medium_tee_color">Yellow</string>
    <string name="easy_tee_color">White</string>

    <string name="background_image_content_description">background image</string>
    <string name="map_image_content_description">map image</string>
    <string name="default_player_count">1</string>

    <string name="hole_number">Hole 1</string>
    <string name="hole_name">Hole 1</string>

    <string name="next_hole">Next Hole</string>
    <string name="previous_hole">Previous Hole</string>
    <string name="return_to_player_selection">Player Info</string>
    <string name="complete_round">Scores</string>

    <string name="par">Par</string>
    <string name="hard_distance">Hard</string>
    <string name="medium_distance">Medium</string>
    <string name="easy_distance">Easy</string>
    <string name="close">Close</string>

    <string name="clear_scorecard">Clear Scorecard and Reset App</string>
    <string name="back_to_scorecard">Back To Scorecard</string>

    <string name="par_so_far">Par So Far</string>
    <string name="score">Stroke Count</string>
    <string name="player_tee">Playing From</string>
    <string name="zero">0</string>
    <string name="X">X</string>

</resources>
