<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/game_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/initial_layout_background"
        android:contentDescription="@string/background_image_content_description"
        android:scaleType="centerCrop"/>

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/header"
            android:id="@+id/hole_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hole_number" />

        <TextView
            android:visibility="gone"
            style="@style/header"
            android:id="@+id/hole_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/hole_name" />

    </LinearLayout>

    <!-- Next and Previous Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/warning_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous_hole"
            android:onClick="decrementHole"/>

        <Button
            style="@style/button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next_hole"
            android:onClick="incrementHole"/>

    </LinearLayout>

</RelativeLayout>