<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/game_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/initial_layout_background" />

    <!-- Header -->
    <LinearLayout
        android:id="@+id/score_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hole_number"
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hole_number" />

        <TextView
            android:id="@+id/hole_name"
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/hole_name"
            android:visibility="gone" />

    </LinearLayout>

    <!-- Main Grid -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/score_header"
        android:orientation="horizontal">

        <!-- Hole Info -->
        <LinearLayout
            android:id="@+id/hole_information"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/text_view_background"
            android:orientation="vertical"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hole_par"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/par"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hole_hard_tee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Red"
                    android:padding="2dp"
                    android:text="@string/easy_distance"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/hole_medium_tee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Yellow"
                    android:padding="2dp"
                    android:text="@string/medium_distance" />

                <TextView
                    android:id="@+id/hole_easy_tee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/White"
                    android:padding="2dp"
                    android:text="@string/hard_distance" />

            </LinearLayout>

            <ImageView
                android:id="@+id/hole_map_small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:onClick="fullSizeMap"
                android:scaleType="fitCenter"
                android:src="@drawable/map_icon" />

            <!-- Next and Previous Buttons -->
            <LinearLayout
                android:id="@+id/prev_next_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    style="@style/button_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:onClick="decrementHole"
                    android:text="@string/previous_hole" />

                <Button
                    style="@style/button_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="2dp"
                    android:onClick="incrementHole"
                    android:text="@string/next_hole" />

            </LinearLayout>

            </LinearLayout>

        <!-- Player Scores -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="4dp">

            <ScrollView
                android:id="@+id/player_score_counters"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical">

                    <!-- Player 1 -->
                    <LinearLayout
                        android:id="@+id/player_1_score_group"
                        style="@style/player_score_group">

                        <TextView
                            android:id="@+id/player_1_score_name"
                            style="@style/player_score_player_name"
                            android:text="@string/player_1" />

                        <Button
                            style="@style/player_score_subtract_button"
                            android:onClick="player1DecrementScore"
                            android:text="@string/decrement" />

                        <TextView
                            android:id="@+id/player_1_score_score"
                            style="@style/player_score_score"
                            android:text="0" />

                        <Button
                            style="@style/player_score_add_button"
                            android:onClick="player1IncrementScore"
                            android:text="@string/increment" />

                    </LinearLayout>

                    <!-- Player 2 -->
                    <LinearLayout
                        android:id="@+id/player_2_score_group"
                        style="@style/player_score_group"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/player_2_score_name"
                            style="@style/player_score_player_name"
                            android:text="@string/player_2" />

                        <Button
                            style="@style/player_score_subtract_button"
                            android:onClick="player2DecrementScore"
                            android:text="@string/decrement" />

                        <TextView
                            android:id="@+id/player_2_score_score"
                            style="@style/player_score_score"
                            android:text="0" />

                        <Button
                            style="@style/player_score_add_button"
                            android:onClick="player2IncrementScore"
                            android:text="@string/increment" />

                    </LinearLayout>

                    <!-- Player 3 -->
                    <LinearLayout
                        android:id="@+id/player_3_score_group"
                        style="@style/player_score_group"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/player_3_score_name"
                            style="@style/player_score_player_name"
                            android:text="@string/player_3" />

                        <Button
                            style="@style/player_score_subtract_button"
                            android:onClick="player3DecrementScore"
                            android:text="@string/decrement" />

                        <TextView
                            android:id="@+id/player_3_score_score"
                            style="@style/player_score_score"
                            android:text="0" />

                        <Button
                            style="@style/player_score_add_button"
                            android:onClick="player3IncrementScore"
                            android:text="@string/increment" />

                    </LinearLayout>

                    <!-- Player 4 -->
                    <LinearLayout
                        android:id="@+id/player_4_score_group"
                        style="@style/player_score_group"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/player_4_score_name"
                            style="@style/player_score_player_name"
                            android:text="@string/player_4" />

                        <Button
                            style="@style/player_score_subtract_button"
                            android:onClick="player4DecrementScore"
                            android:text="@string/decrement" />

                        <TextView
                            android:id="@+id/player_4_score_score"
                            style="@style/player_score_score"
                            android:text="0" />

                        <Button
                            style="@style/player_score_add_button"
                            android:onClick="player4IncrementScore"
                            android:text="@string/increment" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <!-- Return And Complete Round Button -->
            <LinearLayout
                android:id="@+id/return_and_complete_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    style="@style/warning_button_game"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:onClick="returnToPlayerInfo"
                    android:text="@string/return_to_player_selection" />

                <Button
                    style="@style/warning_button_game"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:onClick="finishRound"
                    android:text="@string/complete_round" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Expanded Hole Map -->
    <ImageView
        android:id="@+id/full_screen_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/close_button"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_background"
        android:scaleType="centerInside"
        android:src="@drawable/map_icon"
        android:visibility="gone" />

    <!-- Expanded Map Close Button -->
    <Button
        android:id="@+id/close_button"
        style="@style/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="closeFullMap"
        android:text="@string/close"
        android:visibility="gone" />

</RelativeLayout>